fix mousewheel zoom, page scroll, html select border on firefox

--- a/public/scss/charts.scss
+++ b/public/scss/charts.scss
@@ -463,6 +463,7 @@ input ~ .checkmark {
   height: 2em;
   line-height: 2em;
   padding-right: 0.5em;
+  border: 1px solid gray;
 }
 
 .chart-box:focus {
